system/harbor/templates/trivy-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: trivy-lb
  namespace: harbor
spec:
  selector:
    app: harbor
    component: trivy
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
